--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h1,h2,h3,h4,h5,h6 {
   /* demo css start  */
 
   :root {
-    --zolo-as: #f00;
+    --zolo-as: #f00ccc;
     --zolo-free-color: #06D6A0;
     --zolo-pro-color: #ff0a77;
     --zolo-new-color: #115cfa;
